test/types/sync/ferguson/sync-copy-init-cannot-coerce.good
sync-copy-init-cannot-coerce.chpl:3: error: Cannot initialize one sync var directly from another; try applying a method like .readFE(), .readFF(), etc. to the pre-existing variable
