test/types/sync/ferguson/sync-copy-init-cannot-coerce.chpl

var i : sync int = 100;
var s : sync string = i;
